[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/LoveYaLikeASister.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/pause menu/rsz_return_square_button.png" type="Texture" id=2]
[ext_resource path="res://ui/pause menu/rsz_1on_off_square_button.png" type="Texture" id=3]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-12-48-088.png" type="Texture" id=4]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-13-41-918.png" type="Texture" id=5]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-13-11-951.png" type="Texture" id=6]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-15-46-534.png" type="Texture" id=7]
[ext_resource path="res://ui/pause menu/rsz_1home_square_button.png" type="Texture" id=8]
[ext_resource path="res://ui/pause menu/rsz_1picsart_22-10-23_08-15-28-816.png" type="Texture" id=9]
[ext_resource path="res://ui/pause menu/rsz_picsart_22-10-23_08-14-00-339.png" type="Texture" id=10]
[ext_resource path="res://Level/Level1/win.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[node name="Title" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -74.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "YOU HAVE ESCAPE"
align = 1

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -147.0
margin_right = 512.0
margin_bottom = -64.0
alignment = 1

[node name="Start" type="TextureButton" parent="VBoxContainer"]
margin_left = 358.0
margin_right = 458.0
margin_bottom = 100.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )

[node name="Credit" type="TextureButton" parent="VBoxContainer"]
margin_left = 462.0
margin_right = 562.0
margin_bottom = 100.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 5 )

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
margin_left = 566.0
margin_right = 666.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credit" to="." method="_on_Credit_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
